# OpenFic

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_EN.md  release-please-config.json
backend/: .gitignore  alembic.ini  hatch_build.py  justfile  pyproject.toml
backend/app/: __init__.py  cli.py  logging.py  main.py  settings.py
backend/app/agent_runtime/: __init__.py  fork.py  model_config.py  modes.py  revisions.py  session_activity.py  tool_call_recovery.py  types.py
backend/app/api/: agent_settings_lock.py  exceptions.py
backend/app/audit/: __init__.py  context.py  queue.py  repo.py
backend/app/background/: __init__.py
backend/app/core/: encryption.py  errors.py  ids.py  storage.py  txt_parser.py  types.py
backend/app/macro/: __init__.py  compiler.py  evaluator.py  lexer.py  parser.py  registry.py  types.py
backend/app/memory/: __init__.py  prompt_chain_runner.py
backend/app/models/: __init__.py  builtin.py  registry.py
backend/app/prompts/: __init__.py  loader.py
backend/app/retrieval/: __init__.py  chapter_index.py  engine.py  index_status.py  service.py  types.py
backend/app/skills/: __init__.py  character-design.yaml  character-relationship.yaml  deslop-lexicon.yaml  deslop-writing.yaml  dialogue-design.yaml  emotional-arc.yaml  loader.py  opening-design.yaml  prose-format.yaml  reader-contract.yaml  reversal-design.yaml  short-submission.yaml  story-deconstruction.yaml  story-hooks.yaml  story-quality.yaml  story-state-tracking.yaml  villain-reveal.yaml
backend/app/socket/: __init__.py  emitter.py  handlers.py  server.py
backend/app/storage/: __init__.py  database.py
backend/packaging/: openfic.spec  server_main.py
backend/tests/: conftest.py  model_registry.py  test_encryption_key.py  test_main.py
backend/tests/agent_runtime/: conftest.py  test_agent_compaction_api.py  test_agent_definitions.py  test_agent_fork.py  test_agent_revision_rollback.py  test_checkpointer.py  test_event_translator.py  test_host_dependencies.py  test_mentions.py  test_model_factory.py  test_orchestrator_graph.py  test_react_agent.py  test_replay_buffer.py  test_session_runner.py  test_types.py
backend/tests/api/: __init__.py  test_access_log.py  test_agent.py  test_agent_definitions.py  test_agent_rules.py  test_agent_settings_lock.py  test_audit_router.py  test_chapter_context.py  test_chapters.py  test_characters.py  test_dashboard_llm.py  test_dashboard_writing.py  test_import.py  test_model_icons.py  test_model_provider_catalog.py  test_model_providers.py  test_model_providers_rerank.py  test_models.py  test_models_embedding.py  test_notes.py  test_projects.py  test_prompt_chains.py  test_retrieval_index.py  test_settings.py  test_skill_reference_docs.py  test_skills.py  test_tasks.py  test_volumes.py  test_world_info.py  test_world_info_entries.py
backend/tests/audit/: test_context.py
backend/tests/background/: conftest.py  test_background_jobs.py  test_retrieval_chapter_index_batch.py  test_session_title_jobs.py  test_supervisor_socket_bridge.py
backend/tests/macro/: __init__.py  test_evaluator.py  test_getworld_compiler.py  test_lexer.py  test_new_macros.py  test_parser.py  test_prompt_chain_compiler.py
backend/tests/memory/: test_chapter_summary_generator.py  test_prompt_chain_runner.py  test_sequence.py  test_summary_service_windows.py
backend/tests/models/: test_builtin.py  test_catalog_icon_proxy.py  test_model_provider_catalog_service.py  test_model_registry.py  (+1 more)
(+1012 files in other folders)
